# ffmpeg-streaming-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_init.sql
src/: janitor.py  main.py  scheduler.py
src/api/: jobs.py
src/core/: config.py  db.py  logging.py  repository.py  schemas.py  security.py
src/events/: bus.py
src/transcoder/: ffmpeg_cmd.py  orphans.py  pool.py  runner.py
src/ui/: index.html
tests/: conftest.py  test_bus.py  test_ffmpeg_cmd.py  test_schemas.py  test_security.py
